2017-03-30  Markus Gans  <guru.mail@muenster.de>
	* Fixed bug: termcap "me" does not reset 
	  the alternate character set

2017-03-28  Markus Gans  <guru.mail@muenster.de>
	* Improved graphic charset pairs (vt100) 
	  for FreeBSD console

2017-03-26  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut compiles now under FreeBSD
	* A new test program to show the termcap variables

2017-03-19  Markus Gans  <guru.mail@muenster.de>
	* Add the "mouse" example to illustrate mouse programming

2017-03-17  Markus Gans  <guru.mail@muenster.de>
	* More constant character pointers

2017-03-13  Markus Gans  <guru.mail@muenster.de>
	* Corrects directly the input cursor position on window moving

2017-03-12  Markus Gans  <guru.mail@muenster.de>
	* The FButtonGroup now has a scrolling area 
	  with on-demand scroll bars
	* Add the "choice" example to demonstrate the FButtonGroup 
	  auto-adjusting with on-demand scroll bars
	* FRect can now combine two FRect objects
	* The FButtonGroup got the possibility of index access 
	  to a child button.
	* Fixed bug in FString copy constructor

2017-03-08  Markus Gans  <guru.mail@muenster.de>
	* Improve input cursor positioning in FScrollView

2017-02-24  Markus Gans  <guru.mail@muenster.de>
	* Corrected swapped top and left offset variables 
	  in the class FVTerm

2017-02-24  Markus Gans  <guru.mail@muenster.de>
	* FListBox gets the option to save a data pointer for 
	  every FListBoxItem element
	* Fixes incorrect return value of FString::toString()

2017-02-19  Markus Gans  <guru.mail@muenster.de>
	* New FWidget methods setMinimumWidth(), setMinimumHeight(), 
	  setMaximumWidth() and setMaximumHeight() 
	* FButtonGroup now inherits from FScrollView. This supports 
	  many buttons to be displayed in a smaller frame.

2017-02-18  Markus Gans  <guru.mail@muenster.de>
	* Allows a window to have more than one FScrollView widget

2017-02-07  Markus Gans  <guru.mail@muenster.de>
	* Uses termcap capability U8 to identify terminals that 