@@ -1,3 +1,9 @@
+2017-04-02  Markus Gans  <guru.mail@muenster.de>
+	* Remap the meta key to left alt key at runtime 
+	  on the FreeBSD console
+	  (Console switching is still possible with 
+	   Ctrl-Alt-F1 through Ctrl-Alt-F8)
+
 2017-03-30  Markus Gans  <guru.mail@muenster.de>
 	* Fixed bug: termcap "me" does not reset 
 	  the alternate character set
